# PatchPath

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
docs/: core-beliefs.md  eval-set-v0.md  index.md  project-map.md  quality-scorecard.md
docs/design-docs/: agent-runtime-choice.md  index.md  tool-execution-retrieval-experiment.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: day-01-bootstrap.md
docs/product-specs/: mvp.md
docs/prototypes/: patchpath-web-demo.html  project-structure-ui-options.html
docs/reviews/: m1-click-3502-brief.md
scripts/: check-docs.sh  eval-brief-smoke.py  eval-v0.sh
src/patchpath/: cli.py  web.py
tests/: test_eval_brief_smoke.py  test_m1_cli.py  test_web.py
