[project]
name = "patchpath"
version = "0.1.0"
description = "Evidence-backed GitHub issue contribution briefs."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
patchpath = "patchpath.cli:main"
patchpath-web = "patchpath.web:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
